[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/Enemies/Lightning.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Enemies/Thundercloud.png" type="Texture" id=2]
[ext_resource path="res://Scenes/ThunderCloud.gd" type="Script" id=3]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 8, 14, -1, 29, 12, 32, -5, 65, 0, 37, -14, 37, -9, 14 )

[sub_resource type="CircleShape2D" id=2]
radius = 159.003

[node name="ThunderCloud" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 0, 36 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="Timer3" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="Detector" to="." method="_on_Detector_body_entered"]
[connection signal="body_entered" from="Detector" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
